change some ux/ui designes

--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -48,52 +48,47 @@
     {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
     
 <style>
-    .number-btn {
-        background-color: lightgray;
-        color: black;
-        border: 1px solid #ccc;
-        margin-right: 5px;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        outline: none;
-    }
 
-    .number-btn.active {
-        background-color: green;
-        color: white;
-    }
+.custom-navbar {
+    background-color: transparent; /* צבע רקע כהה */
+    color: white; /* צבע טקסט לבן */
+}
+    /* עיצוב לכפתור Logout */
+.btn-logout {
+    color: white; /* צבע טקסט לבן */
+    border: none; /* ללא מסגרת */
+    border-radius: 4px; /* פינות מעוגלות */
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
 
-    .number-btn:hover {
-        background-color: darkgray;
-    }
+.btn-logout:hover {
+    background-color: rgb(134, 215, 236); /* צבע רקע כהה יותר בעת מעבר עכבר */
+    transform: scale(1.05); /* הגדלה קלה */
+}
 
-    .unique-btn {
-        display: inline-flex;
-        align-items: center;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 14px;
-        padding: 5px 10px;
-        text-decoration: none;
-    }
+.btn-logout:active {
+    background-color:  rgb(134, 215, 236); /* צבע רקע כהה יותר בעת לחיצה */
+    transform: scale(1); /* החזרת הכפתור לגודלו המקורי בעת לחיצה */
+}
 
-    .unique-btn:hover {
-        background-color: #0056b3;
-    }
+/* עיצוב לכפתור Login */
+.btn-login {
+    background-color: rgb(134, 215, 236); /* צבע רקע ירוק */
+    color: white; /* צבע טקסט לבן */
+    border: none; /* ללא מסגרת */
+    border-radius: 4px; /* פינות מעוגלות */
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
 
-    .unique-icon {
-        margin-left: 5px;
-        border-radius: 3px;
-        padding: 3px;
-        transition: background-color 0.3s;
-        font-size: 1em;
-        line-height: 1;
-    }
+.btn-login:hover {
+    background-color: rgb(134, 215, 236); /* צבע רקע כהה יותר בעת מעבר עכבר */
+    transform: scale(1.05); /* הגדלה קלה */
+}
 
+.btn-login:active {
+    background-color: rgb(134, 215, 236); /* צבע רקע כהה יותר בעת לחיצה */
+    transform: scale(1); /* החזרת הכפתור לגודלו המקורי בעת לחיצה */
+}
     .question-container {
         border: 1px solid #ddd;
         background-color: #f9f9f9;
@@ -116,20 +111,57 @@
     p {
         margin-top: 10px;
     }
+   
+    .custom-font{
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white; /* צבע טקסט */
+
+    }
+    .custom-button {
+    background-color: inherit; /* צבע רקע */
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    color: white; /* צבע טקסט */
+    padding: 10px 20px; /* ריווח פנימי */
+    text-align: center; /* יישור טקסט */
+    text-decoration: none; /* ללא קו תחתון */
+    display: inline-block; /* יישור כמו כפתור */
+    font-size: 16px; /* גודל פונט */
+    border-radius: 4px; /* פינות מעוגלות */
+    transition: background-color 0.3s ease; /* אנימציית מעבר צבע רקע */
+}
+
+.custom-button:hover {
+    background-color: transparent; /* שינוי צבע רקע בעת מעבר עכבר */
+}
+
+.custom-button.active {
+    background-color: transparent; /* צבע רקע עבור כפתור פעיל */
+}
+
 </style>
 
 
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
-    >
-      <a href="/" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <nav class="navbar navbar-expand-lg custom-navbar navbar-light shadow fixed-top p-0">
+      {% if user.is_student %}
+      <a href="{% url 'users:student_dashboard' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <h2 class="m-0 text-primary">
           <img src={% static "img/logo.png" %} alt="Description of Image"
           style="height: 70px;">
-        </h2>
-      </a>
+        </h2>      {% endif %}
+
+
+      {% if user.is_mentor %}
+      <a href="{% url 'users:mentor_dashboard' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <h2 class="m-0 text-primary">
+          <img src={% static "img/logo.png" %} alt="Description of Image"
+          style="height: 70px;">
+        </h2>      {% endif %}
+
+
+   
       <button
         type="button"
         class="navbar-toggler me-4"
@@ -140,14 +172,27 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-          <a href="/" class="nav-item nav-link active">Home</a>
-          <a href="{% url 'users:questions_list' %}" class="nav-item nav-link">Questions</a>
+
+
+          {% if user.is_student %}
+          <a href="{% url 'users:student_dashboard' %}" class="nav-item nav-link custom-button " >Home</a>
+
+                {% endif %}
+    
+    
           {% if user.is_mentor %}
-          <a href="/chat/" class="nav-item nav-link">Add Question</a>
-          <a href="/users/submit-help-request" class="nav-item nav-link">Requests</a>
+          <a href="{% url 'users:mentor_dashboard' %}" class="nav-item nav-link custom-button ">Home</a>
+            
+                {% endif %}
+
+
+          <a href="{% url 'users:questions_list' %}" class="nav-item nav-link custom-button">Questions</a>
+          {% if user.is_mentor %}
+          <a href="/chat/" class="nav-item nav-link custom-button">Add Question</a>
+          <a href="/users/submit-help-request" class="nav-item nav-link custom-button">Requests</a>
           {% endif %}
           {% if user.is_student %}
-          <a href="/users/student_mentor_request" class="nav-item nav-link">Requests</a>
+          <a href="/users/student_mentor_request" class="nav-item nav-link custom-button">Requests</a>
           {% endif %}
 
           
@@ -156,8 +201,8 @@
         {% if user.is_authenticated %}
         <form action="{% url 'users:logout' %}" method="post">
           {% csrf_token %}
-          <button
-            class="btn custom-font btn-primary py-4 px-lg-5 d-none d-lg-block"
+          <button style="color: black;"
+            class="btn custom-font btn-logout py-4 px-lg-5 d-none d-lg-block " 
             title="User Logout"
           >
             Logout<i class="bi bi-box-arrow-in-right"></i>
@@ -166,13 +211,15 @@
         {% else %}
         <a
           href="{% url 'users:login' %}"
-          class="btn custom-font btn-primary py-4 px-lg-5 d-none d-lg-block"
+          class="btn custom-font btn-login py-4 px-lg-5 d-none d-lg-block "
           >Login<i class="fa fa-arrow-right ms-3"></i
         ></a>
 
         {% endif %}
       </div>
     </nav>
+    <div style="height: 97px;"></div>
     <main>{% block content %} {% endblock %}</main>
+    
   </body>
 </html>
