--- a/CodeForU/static/css/style.css
+++ b/CodeForU/static/css/style.css
@@ -606,7 +606,7 @@ body {
 }
 
 .slide_banner1 {
-    background-image: url('../img/imgindex.webp');
+    background-image: url('../img/img5.webp');
     min-height: 450px;
     position:relative;
     background-repeat: no-repeat;
@@ -1303,15 +1303,19 @@ button {
    #PAGE WRAPPER
    ========================================================================== */
    .page-wrapper {
-    height: auto;
+    background-color: transparent;
+
     min-height: 100vh; /* שימוש במינימום גובה במקום גובה מוחלט */
 }
 
 .wrapper {
+  background-color: transparent;
     height: auto;
 }
 
 .card {
+  background-color: transparent;
+
     height: auto;
 }
 
@@ -1375,7 +1379,7 @@ h6 {
 }
 
 .bg-gra-02 {
-  background: -webkit-gradient(linear, left bottom, right top, from(#fc2c77), to(#6c4079));
+  background: #9053c7;
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
@@ -1799,6 +1803,7 @@ input {
   color: #525252;
   font-weight: 400;
   margin-bottom: 40px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* ==========================================================================
@@ -1894,6 +1899,7 @@ input {
         display: inline-flex; /* מאפשר שימוש בתכונת align-items */
         align-items: center; /* מיישר את התוכן במרכז האנכי */
         justify-content: center; /* מיישר את התוכן במרכז האופקי */
+      
     }
     
     .btn {
