--- a/CodeForU/users/templates/login.html
+++ b/CodeForU/users/templates/login.html
@@ -67,7 +67,7 @@
                     
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn" type="submit">
-                            Login
+                            Let's Go!
                         </button>
                     </div>
 
