--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -50,7 +50,11 @@
 <style>
 
 .custom-navbar {
-    background-color: transparent; /* צבע רקע כהה */
+  background: #9053c7;
+    background: -webkit-linear-gradient(-135deg, #c850c0, #bb2fd0);
+    background: -o-linear-gradient(-135deg, #c850c0, #bb2fd0);
+    background: -moz-linear-gradient(-135deg, #c850c0, #bb2fd0);
+    background: linear-gradient(-135deg, #c850c0, #bb2fd0);
     color: white; /* צבע טקסט לבן */
 }
     /* עיצוב לכפתור Logout */
