--- a/CodeForU/users/templates/student_dashboard.html
+++ b/CodeForU/users/templates/student_dashboard.html
@@ -7,9 +7,7 @@
 {% load static %}
 {% block content %}
 
-<br/>
-<h1 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">  Welcome!</h1>
-<br/>
+
 
 
 <head>
@@ -50,7 +48,9 @@
 </style>
 </head>
 <body >
-   
+    <br/>
+    <h1 style="display:flex;justify-content: center; align-items: center; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">  Welcome {{student.first_name}}!</h1>
+    <br/>
 
     <section id="banner_parallax" class="slide_banner1">
         <div class="container">
