--- a/CodeForU/users/templates/set_new_password.html
+++ b/CodeForU/users/templates/set_new_password.html
@@ -1,25 +1,20 @@
 {% load static %}
 
-
 {% block title %}
+Set New Password
 {% endblock %}
 
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title>Set New Password</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->    
     <link rel="icon" type="image/png" href={% static "img/icons/favicon.ico" %}/>
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href={% static "fonts/font-awesome-4.7.0/css/font-awesome.min.css" %}>
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href={% static "css/util.css" %}>
     <link rel="stylesheet" type="text/css" href={% static "css/style.css" %}>
-
-    <!--===============================================================================================-->
 </head>
 <body>
     
@@ -31,25 +26,18 @@
                     <img src={% static "img/codeforu2.png" %} alt="IMG">
                 </div>
 
-                <form method="POST" action="{% url 'users:login' %}" class="login100-form validate-form">
+                <form method="POST" action="{% url 'users:set_new_password' %}" class="login100-form validate-form">
                     {% csrf_token %}
-                    <span class="login100-form-title">
-                        Login
-                    </span>
-
-                    
-
-                    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="email" name="username" placeholder="Email">
+                    <span class="login100-form-title">Set New Password</span>
+                    <div class="wrap-input100 validate-input" data-validate="Password is required">
+                        <input class="input100" type="password" name="new_password" placeholder="New Password">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <i class="fa fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
-                    
-
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="password" placeholder="Password">
+                        <input class="input100" type="password" name="confirm_password" placeholder="Confirm Password">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-lock" aria-hidden="true"></i>
@@ -64,27 +52,12 @@
                             {% endfor %}
                         </div>
                     {% endif %}
-                    
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn" type="submit">
-                            Login
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-12">
-                        
-                        <a class="txt2" href="{% url 'users:password_reset' %}">
-                            Forgot Password?
-                        </a>
-                    </div>
-
-                    <div class="text-center p-t-136">
-                        <a class="txt3" href="{% url 'users:register' %}">
-                            Create your Account
-                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                        </a>
+                        <button class="login100-form-btn" type="submit">Set Password</button>
                     </div>
                 </form>
+                
+                
             </div>
         </div>
     </div>
