fixed View in password reset

--- a/CodeForU/users/templates/password_reset_code.html
+++ b/CodeForU/users/templates/password_reset_code.html
@@ -1,14 +1,12 @@
 {% load static %}
 
-{% block title %}
-Enter Code
-{% endblock %}
+
 
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Enter Code</title>
+    <title>Verify Email</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href={% static "img/icons/favicon.ico" %}/>
