Edit login feedbacks

--- a/CodeForU/users/templates/register.html
+++ b/CodeForU/users/templates/register.html
@@ -145,6 +145,9 @@ Sign Up
                         <div class="p-t-15">
                             <button class="sign100-form-btn" type="submit">Submit</button>
                         </div>
+                        <a class="d-flex justify-content-center align-center mt-3 txt2" href="{% url 'users:login' %}">
+                            Back to Login
+                        </a>
                     </form>
                 </div>
             </div>
