--- a/CodeForU/users/templates/questions_list.html
+++ b/CodeForU/users/templates/questions_list.html
@@ -2,10 +2,112 @@
 {% load static %}
 
 {% block title %}
-Add Questions
+Questions List
 {% endblock %}
 
 {% block content %}
+<link href={% static "img/favicon.ico" %} rel="icon">
+
+<!-- Google Web Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
+
+<!-- Icon Font Stylesheet -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+<!-- Libraries Stylesheet -->
+<link href={%static  "lib/animate/animate.min.css" %} rel="stylesheet">
+<link href={%static "lib/owlcarousel/assets/owl.carousel.min.css" %}  rel="stylesheet">
+
+<!-- Customized Bootstrap Stylesheet -->
+<link href={%static "css/bootstrap.min.css" %} rel="stylesheet">
+
+<!-- Template Stylesheet -->
+<link href={%static "css/style.css" %} rel="stylesheet">
+<link href={%static "css/animate.css" %} rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<style>
+.h1{
+color: white;       
+}
+.number-btn {
+background-color: lightgray;
+color: black;
+border: 1px solid #ccc;
+margin-right: 5px;
+padding: 10px 20px;
+font-size: 16px;
+cursor: pointer;
+outline: none;
+}
+
+.number-btn.active {
+background-color: rgb(148, 243, 250);
+color: white;
+}
+
+.number-btn:hover {
+background-color: darkgray;
+}
+</style>
+
+<style>
+/* סגנונות לכפתור */
+.unique-btn {
+display: inline-flex; /* מציב את המלל והאייקון באותו קו */
+align-items: center; /* מוודא שהמלל והאייקון מיושרים במרכז */
+background-color: #007bff; /* צבע הרקע של הכפתור */
+color: white; /* צבע הטקסט */
+border: none;
+border-radius: 5px;
+cursor: pointer;
+font-size: 14px; /* גודל טקסט קטן יותר */
+padding: 5px 10px; /* ריווח פנימי קטן יותר */
+text-decoration: none; /* מסיר קו תחתון מהקישור */
+}
+
+/* אפקט hover לכפתור */
+.unique-btn:hover {
+background-color: #0056b3; /* שינוי צבע הרקע בעת מעבר עם העכבר */
+}
+
+/* סגנונות לאייקון */
+.unique-icon {
+margin-left: 5px; /* ריווח קטן יותר בין הטקסט לאייקון */
+border-radius: 3px; /* לעגל את פינות האייקון */
+padding: 3px; /* ריווח פנימי קטן יותר של האייקון */
+transition: background-color 0.3s; /* שינוי צבע חלק */
+font-size: 1em; /* גובה האייקון יהיה מותאם לפי גובה הכתב */
+line-height: 1; /* מוודא שהאייקון מתיישר בצורה נכונה */
+}
+</style>
+<style>
+
+
+.question-container:hover {
+background-color: white; /* או אותו צבע רקע כמו במצב הרגיל */
+}   
+.question-item:hover {
+background-color: inherit; /* או אותו צבע רקע כמו במצב הרגיל */
+}
+.question-item {
+background-color: inherit; /* או אותו צבע רקע כמו במצב הרגיל */
+}
+</style>
+
+<style>
+body{
+background: #9053c7;
+background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
+background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
+background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
+background: linear-gradient(-135deg, #c850c0, #4158d0);
+
+}
+</style>
 <div class="main-container">
     <div class="pd-ltr-20 xs-pd-20-10">
         <div class="min-height-200px">
@@ -22,12 +124,15 @@ Add Questions
                                                 <!-- Open Task start -->
                                                 <div class="task-title row align-items-center">
                                                     <div class="col-md-8 col-sm-12">
-                                                        <h5>Open Questions</h5>
+                                                        <br/>
+                                                        <br/>
+
+                                                        <div class="task-type" style="color: white; font-size: xx-large; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Open Questions: </div>
                                                     </div>
                                                 </div>
                                                 <div class="profile-task-list pb-30">
                                                     <div class="col-lg-6 col-md-12 col-sm-12">
-                                                        <div class="task-type">Choose a Level:</div>
+                                                        <div class="task-type" style="color: white; font-size: larger; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Choose a Level:</div>
                                                         <br/>
                                                         <div class="number-buttons mb-15">
                                                             {% if user_level is not None %}
@@ -50,15 +155,15 @@ Add Questions
                                                         {% for question in questions %}
                                                             <li class="question-item" data-level="{{ question.level }}" {% if user_level is not None and question.level > user_level %}style="display:none;"{% endif %}>
                                                                 <div class="question-container">
-                                                                    <h5>Que ID: {{ question.id }}</h5>
+                                                                    <h5 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Que ID: {{ question.id }}</h5>
                                                                     <br/>
-                                                                    <div class="task-type">Level: {{ question.level }}</div>
-                                                                    <div class="task-type">Submitted by: {{ question.user }}</div>
-                                                                    <p>Question: {{ question.question_text }}</p>
-                                                                    <div class="task-type">Created at: {{ question.created_at }}</div>
+                                                                    <div class="task-type" style="color: grey; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Level: {{ question.level }}</div>
+                                                                    <div class="task-type" style="color: grey; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" >Submitted by: {{ question.user }}</div>
+                                                                    <div class="task-type" style="color: black; font-size: larger; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Question: {{ question.question_text }}</div>
+                                                                    <div class="task-type" style="color: grey; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Created at: {{ question.created_at }}</div>
                                                                     <br/>
                                                                     {% if request.user.is_student %}
-                                                                        <a href="{% url 'users:answer_question' question.id %}" class="unique-btn unique-custom-font unique-btn-primary unique-py-4 unique-px-lg-5 unique-d-none unique-d-lg-block" style="background-color: #bdd6ea;">
+                                                                        <a href="{% url 'users:answer_question' question.id %}" class="unique-btn unique-custom-font unique-btn-primary unique-py-4 unique-px-lg-5 unique-d-none unique-d-lg-block" style="background-color: #8fe7ff;">
                                                                             Answer Question <i class="fa fa-pencil-square-o unique-icon"></i>
                                                                         </a>
                                                                     {% endif %}
